--- a/NLP/NLP1_TextClassification.ipynb
+++ b/NLP/NLP1_TextClassification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoSMW3PeMtyq5KdoJN8Jl8",
+      "authorship_tag": "ABX9TyOMtx2q6OgRRyPwMaMUqnYK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import opendatasets as od"
+        "!pip install opendatasets"
       ],
       "metadata": {
         "id": "xOouOCnCAdKk"
@@ -2250,11 +2250,11 @@
         "accuracy_score(y_test, y_pred)"
       ],
       "metadata": {
-        "id": "8B74cWa6z-o7",
-        "outputId": "ea250e67-5d65-47e6-c028-5390f9960bb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8B74cWa6z-o7",
+        "outputId": "ea250e67-5d65-47e6-c028-5390f9960bb0"
       },
       "execution_count": 46,
       "outputs": [
@@ -2309,11 +2309,11 @@
         "print(x_test_tfidf)"
       ],
       "metadata": {
-        "id": "jZbDhK4U1WTE",
-        "outputId": "32e14f32-33ec-45ba-bfea-73bddc9b047f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jZbDhK4U1WTE",
+        "outputId": "32e14f32-33ec-45ba-bfea-73bddc9b047f"
       },
       "execution_count": 53,
       "outputs": [
@@ -2388,11 +2388,11 @@
         "accuracy_score(y_test, y_pred)"
       ],
       "metadata": {
-        "id": "L4LpdTdw1XdR",
-        "outputId": "83e34f4f-9d6d-408d-b004-22399cb1b493",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L4LpdTdw1XdR",
+        "outputId": "83e34f4f-9d6d-408d-b004-22399cb1b493"
       },
       "execution_count": 54,
       "outputs": [
