--- a/NLP/NLP1_Duplicate_Question_Pairs_.ipynb
+++ b/NLP/NLP1_Duplicate_Question_Pairs_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO/guABerwplBAQWdnVM7Nl",
+      "authorship_tag": "ABX9TyM07V9qSJvamuC+RRU2tiPi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17499,15 +17499,13 @@
         "  input_query.extend(fuzzy_features)\n",
         "\n",
         "\n",
-        "  # bow feature for q1\n",
-        "  q1_bow = cv.transform([q1]).toarray()\n",
-        "\n",
-        "  # bow feature for q2\n",
-        "  q2_bow = cv.transform([q2]).toarray()\n",
+        "  # bow feature for q1, q1\n",
+        "  q1_arr, q2_arr = np.vsplit(cv.fit_transform(question).toarray(), 2)\n",
         "\n",
         "\n",
         "\n",
-        "  return np.hstack((np.array(input_query).reshape(1,22),q1_bow,q2_bow))\n",
+        "\n",
+        "  return np.hstack((np.array(input_query).reshape(1,22),q1_arr,q2_arr))\n",
         "\n",
         "\n",
         "\n",
@@ -17529,12 +17527,12 @@
         "rf.predict(query_point_creator(q1,q3))"
       ],
       "metadata": {
-        "id": "XpjlYSy5hBXv",
-        "outputId": "9dc0aad0-b7d3-4902-dcd0-16addd3fa54b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "XpjlYSy5hBXv",
+        "outputId": "9dc0aad0-b7d3-4902-dcd0-16addd3fa54b"
       },
       "execution_count": 296,
       "outputs": [
