--- a/NLP/NLP1_Duplicate_Question_Pairs_.ipynb
+++ b/NLP/NLP1_Duplicate_Question_Pairs_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP9KRYULB0xKz1bErw9gFo5",
+      "authorship_tag": "ABX9TyMuyxOJBBNwVA8uBTyvD5MF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14290,7 +14290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15467,7 +15467,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15495,7 +15495,7 @@
           "height": 458
         }
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -17634,7 +17634,7 @@
       "metadata": {
         "id": "WP74VQXYkb7n"
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17648,7 +17648,7 @@
       "metadata": {
         "id": "GX6DbeN0kb40"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17705,7 +17705,7 @@
       "metadata": {
         "id": "ogzJ0gB_kb2W"
       },
-      "execution_count": 249,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17739,7 +17739,7 @@
       "metadata": {
         "id": "V7SdDjsVl7VW"
       },
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17766,7 +17766,7 @@
       "metadata": {
         "id": "kWHrqDNOkbzg"
       },
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17775,7 +17775,7 @@
       "metadata": {
         "id": "CHwtTuS_kbqh"
       },
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17836,7 +17836,7 @@
       "metadata": {
         "id": "VfMb1P43cwvK"
       },
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17859,15 +17859,15 @@
     {
       "cell_type": "code",
       "source": [
-        "q1 = 'Where is the capital of India?'\n",
-        "q2 = 'What is the current capital of Pakistan?'\n",
-        "q3 = 'Which city serves as the capital of India?'\n",
-        "q4 = 'What is the business capital of India?'"
+        "q1 = 'Where is the capital of Bangladesh?'\n",
+        "q2 = 'What is the current capital of UK?'\n",
+        "q3 = 'Which city serves as the capital of Bangladesh?'\n",
+        "q4 = 'What is the business capital of UK?'"
       ],
       "metadata": {
         "id": "XpjlYSy5hBXv"
       },
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17878,7 +17878,7 @@
       "metadata": {
         "id": "utqTGKUmtQrf"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -17893,7 +17893,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
