--- a/NLP/Named_Entity_Recognition.ipynb
+++ b/NLP/Named_Entity_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMx180S/8KrkdQTiob8mQ0u",
+      "authorship_tag": "ABX9TyOKK4moBqba/NJvhkseoOFT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "mweki6_GIOFd"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "FxRZpCoIJ-rl"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0BdLs_6sIX92",
-        "outputId": "37a2327a-df01-4907-c426-cebc2e84fa35"
+        "outputId": "bad22340-4038-478b-e4d8-0eb97178aea3"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 4
         }
       ]
     },
@@ -89,9 +89,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rrcTooP7Ijrd",
-        "outputId": "51ccd385-4000-45d3-f06b-ec0321c3bcc1"
+        "outputId": "5cab8f99-618b-4c18-c961-6164606a370c"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,9 +117,9 @@
           "height": 52
         },
         "id": "M8SiqwywJj0h",
-        "outputId": "746d3f65-9566-41a3-b19d-5c3bd013b432"
+        "outputId": "c3e15fde-d6e3-458b-f5f5-f922ac0a08ca"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -160,9 +160,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7cvxS1NOKant",
-        "outputId": "e810d0db-eab3-4ad0-ee53-cf45a7b4ac04"
+        "outputId": "da082555-bcbf-49e9-ed19-b4a70b85e0b1"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 7
         }
       ]
     },
@@ -206,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXrtqV6ULaqr",
-        "outputId": "15baef34-08c8-40ad-ac4e-bcb0352ac14b"
+        "outputId": "82bc172f-89ab-465f-95e6-3ec0d6026c5e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b4muVePTMGA0",
-        "outputId": "482d7421-d34c-4d51-ba93-380d5e0ae0a7"
+        "outputId": "5f30fdac-bd61-4509-a5ef-c2fb6132448f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2qcJ_p-zNYUs",
-        "outputId": "8cc742f2-6912-4434-d47c-b9ec1a46fb39"
+        "outputId": "398d6365-99f7-4c01-ff98-6885348a87fe"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 10
         }
       ]
     },
@@ -290,7 +290,7 @@
       "metadata": {
         "id": "8KrTUra_Nqgt"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "InCiP_ViOZC7",
-        "outputId": "091c4339-9dbd-4143-bf8d-f5b19d2fcd7f"
+        "outputId": "ff4d33d5-38be-4c7b-de3a-7e92472c8b48"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
       "metadata": {
         "id": "CKuiVJ51OnJh"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,29 +347,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tWsEJnTuQ8AJ",
-        "outputId": "b654fc8b-98b8-4636-f730-9fa681732c2b"
+        "outputId": "9a59a00a-71a1-40a3-9cf6-c93109683617"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Kiran | GPE\n",
-            "India | COUNTRY\n",
+            "India | GPE\n",
             "Google | ORG\n",
             "Google | ORG\n",
-            "Delhi | CITY\n",
+            "Delhi | GPE\n",
             "Chaat | ORG\n",
-            "Gujarat | STATE\n",
+            "Gujarat | GPE\n",
             "Dal Dhokli | PERSON\n",
-            "Tamilnadu | STATE\n",
+            "Tamilnadu | GPE\n",
             "Pongal | PERSON\n",
-            "Andhrapradesh | STATE\n",
+            "Andhrapradesh | GPE\n",
             "Biryani | PERSON\n",
-            "Assam | STATE\n",
+            "Assam | GPE\n",
             "Papaya Khar | PERSON\n",
-            "Bihar | STATE\n",
+            "Bihar | GPE\n",
             "Litti Chowkha | ORG\n"
           ]
         }
@@ -387,7 +387,7 @@
       "metadata": {
         "id": "-s3ycDyySI7U"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fr0AkFOXSlkl",
-        "outputId": "55339730-e09b-453c-cbae-b3a59e9308a1"
+        "outputId": "26045ff8-92d3-4384-e9d8-24621646688b"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,17 +413,17 @@
             "India -> country\n",
             "Google -> ORG\n",
             "Google -> ORG\n",
-            "Delhi -> CITY\n",
+            "Delhi -> GPE\n",
             "Chaat -> ORG\n",
-            "Gujarat -> STATE\n",
+            "Gujarat -> GPE\n",
             "Dal Dhokli -> PERSON\n",
-            "Tamilnadu -> STATE\n",
+            "Tamilnadu -> GPE\n",
             "Pongal -> PERSON\n",
-            "Andhrapradesh -> STATE\n",
+            "Andhrapradesh -> GPE\n",
             "Biryani -> PERSON\n",
-            "Assam -> STATE\n",
+            "Assam -> GPE\n",
             "Papaya Khar -> PERSON\n",
-            "Bihar -> STATE\n",
+            "Bihar -> GPE\n",
             "Litti Chowkha -> ORG\n"
           ]
         }
@@ -471,9 +471,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrN1ivDndavy",
-        "outputId": "2c3303bd-c7c3-4f0c-9cd8-cadac6ad31c0"
+        "outputId": "f5b85256-56fa-4698-8963-f513cd246629"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 17
         }
       ]
     },
@@ -523,9 +523,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1kioBYnfS7t0",
-        "outputId": "68c6a867-3789-4990-96d9-2c555fe75e4e"
+        "outputId": "f5a34cf0-7521-4d49-b90c-c9373bd88697"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,9 +583,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6jviCwckUH3f",
-        "outputId": "939e2ee7-bc18-437f-d5ac-ba87700a4ad4"
+        "outputId": "7ff1ef16-1ad7-4c3d-d0fa-5649a2dd0416"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,10 +612,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Task2"
+      ],
+      "metadata": {
+        "id": "WgyvRkT79mbL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"\"\"Sachin Tendulkar was born on 24 April 1973,\n",
+        "Virat Kholi was born on 5 November 1988,\n",
+        "Dhoni was born on 7 July 1981\n",
+        "and finally Ricky ponting was born on 19 December 1974.\"\"\""
+      ],
+      "metadata": {
+        "id": "vtfqikPu9hP3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc = nlp(text)"
+      ],
+      "metadata": {
+        "id": "ewNL9Mqs90pw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "birth_dates = []\n",
+        "\n",
+        "for ent in doc.ents:\n",
+        "  if ent.label_ == \"DATE\":\n",
+        "    birth_dates.append(ent.text)\n",
+        "print(\"All birth date:\", birth_dates)\n",
+        "print(\"count:\", len(birth_dates))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GPnleRyn94d0",
+        "outputId": "eb950270-6ef4-45e3-e982-cfeae7fcadf6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All birth date: ['24 April 1973', '5 November 1988', '7 July 1981', '19 December 1974']\n",
+            "count: 4\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3BfG_o-8eElX"
+        "id": "EajVNki_-X8J"
       },
       "execution_count": null,
       "outputs": []
